[package]
name = "openck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "openck"

#[worksoace]
#members = [
#    "crates/*"
#]

[dependencies]

#rust-random
#https://github.com/rust-random
#https://github.com/rust-random/rand
rand = "0.8.5"
rand_chacha = "0.3.1"