[package]
name = "openck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "openck"

#[worksoace]
#members = [
#    "crates/*"
#]

[dependencies]
clap = "4.2.4"
flate2 = "1.0.26"
ed25519-dalek = "1.0.1"
rand_core="0.5.0"

#BLAKE3
blake3 = "1.3.3"

#RustRandom
rand = "0.8.5"
rand_chacha = "0.3.1"
#Rust Crypto
ctr = "0.9.2"
ghash = "0.5.0"
aes = "0.8.2"
subtle = { version = "2", default-features = false }
aead = "0.5.2"
aes-gcm = "0.10.1"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
digest = "0.10.6"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.8"
hkdf = "0.12.3"