[package]
name = "ock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ock"

#[worksoace]
#members = [
#    "crates/*"
#]

[dependencies]
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.2"

#
chacha20 = "0.9.1"

# blake3
blake3 = "1.3.3"

#
aead = "0.5.2"
cipher = "0.4.4"
