[package]
name = "ock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ock"

#[worksoace]
#members = [
#    "crates/*"
#]



[dependencies]

#crates


#clap-rs
clap = "4.2.4"

#Rust
flate2 = "1.0.26"

#dalek-cryptography
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2"

#BLAKE3-team/BLAKE3
blake3 = "1.3.3"

#rust-random
rand = "0.8.5"
rand_core="0.5.0"
rand_chacha = "0.3.1"

#Rust Crypto
zeroize = "1.3.0"
subtle = { version = "2", default-features = false }

#/traits
aead = "0.5.2"
#digest = "0.10.6"

#/stream-ciphers
chacha20 = "0.9.1"

#/AEADs
#chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.1"

#/hashes
sha2 = "0.10.6"
#sha3 = "0.10.8"

#/block-ciphers
#aes = "0.8.2"

#/kdfs
hkdf = "0.12.3"

#/universal-hashes
poly1305 = "0.8.0"